fix bug book service crud